# nyx-assistant

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  deploy.sh  index.html  package.json  snapcraft.yaml  update.sh  vite.config.js  webpack.config.js
.github/workflows/: deploy.yml  npm-publish.yml
app/: eslint.config.js  index.html  vite.config.js
app/src/: App.vue  main.js  nyx.js
app/src/assets/: app.css
app/src/controls/: DeviceDescr.vue  Devices.vue  NavTabs.vue  TabPane.vue  VectorDefs.vue  VectorDescr.vue  Vectors.vue
app/src/controls/descrs/: DeviceDescr.vue  NodeDescr.vue  VectorDescr.vue
app/src/controls/preview/: NyxDevice.vue  NyxGroup.vue
app/src/controls/preview/nyx/: NyxLightVector.vue  NyxNumberVector.vue  NyxSwitchVector.vue  NyxTextVector.vue
app/src/controls/tables/: Defs.vue  Devices.vue  Vectors.vue
src/: App.vue  main.js  nyx.js  plugin.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src/assets/: app.css
src/assets/templates/: ccd.json  dome.json  focuser.json  gps.json  telescope.json
src/components/descrs/: DeviceDescr.vue  NodeDescr.vue  VectorDescr.vue
src/components/tables/: DeviceTable.vue  PropTable.vue  VectorTable.vue
src/confs/: AssistantConf.vue
src/controls/descrs/: DeviceDescr.vue  NodeDescr.vue  VectorDescr.vue
src/controls/preview/: NyxDevice.vue  NyxGroup.vue
src/controls/preview/nyx/: NyxLightVector.vue  NyxNumberVector.vue  NyxSwitchVector.vue  NyxTextVector.vue
src/controls/tables/: Defs.vue  Devices.vue  Props.vue  Vectors.vue
src/plugins/: dialog.js  std.js
src/views/: AssistantView.vue
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: desktop.json
tauri/src/: lib.rs
