[package]
name = "nyx-assistant"
version = "1.0.0"
description = "Nyx Assistant"
authors = ["Jérôme ODIER"]
license = "AGPL"
repository = "https://gitlab.in2p3.fr/lpsc-kid/nyx-assistant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nyxassistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = ["devtools"] }
#tauri = "2.4.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-http = "2.4.3"
tauri-plugin-fs = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
