[package]
name = "nyx-assistant"
version = "1.0.0"
description = "Nyx Assistant"
authors = ["Jérôme ODIER"]
license = "GPL-3.0-or-later"
repository = "https://gitlab.in2p3.fr/lpsc-kid/nyx-assistant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nyxassistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
#tauri = { version = "2.8.5", features = ["devtools"] }
tauri = { version = "2.9.3", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-http = "2.5.4"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
