[package]
name = "nyx-assistant"
version = "1.0.0"
description = "Nyx Assistant"
authors = ["Jérôme ODIER"]
license = "AGPL"
repository = "https://gitlab.in2p3.fr/lpsc-kid/nyx-assistant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pollux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.3", features = ["devtools"] }
tauri-plugin-notification = "2.0.0-rc.1"
tauri-plugin-dialog = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.1"
tauri-plugin-fs = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
